Guider layout issues fixed
* Multiple white space removals
* Student name and email rendering fixes
* Wrong header in vops and statistics
* Adjusted localization for hops and vops
* Adjusted markup for vops (not finnished yet)
* Fixed font in charts
* Fixed layout issues of fie uploader/uploaded file lists in mobile
* Removed deprecated text class name from hops
* Fixed vops rendering in mobiles

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/chart.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/chart.scss
@@ -243,6 +243,7 @@
   background-color: $color-primary;
   border-radius: 3px;
   color: $color-default;
+  cursor: pointer;
   display: inline-flex;
   flex-basis: auto;
   flex-grow: 0;
